--- a/src/deploy/recommended/kubernetes-dashboard-arm.yaml
+++ b/src/deploy/recommended/kubernetes-dashboard-arm.yaml
@@ -116,7 +116,7 @@ spec:
           # Uncomment the following line to manually specify Kubernetes API server Host
           # If not specified, Dashboard will attempt to auto discover the API server and connect
           # to it. Uncomment only if the default does not work.
-          - --apiserver-host=http://192.168.2.8:6443
+          - --apiserver-host=https://192.168.2.8:6443
         volumeMounts:
         - name: kubernetes-dashboard-certs
           mountPath: /certs
